@@ -4587,4 +4587,5 @@ Changelog for GXemul:
 		Minor OpenFirmware and SPR fixes to reach further with a
 		FreeBSD/powerpc 9.0 kernel (-Xe g4).
 		Updating the NetBSD/pmax install instructions: 5.1 -> 5.1.1.
+		Updating the NetBSD/cobalt install instructions 5.0.1 to 5.1.1.
 
